--- a/home.html
+++ b/home.html
@@ -41,7 +41,6 @@
     </div>
 </div>
 
-
         </nav>
     </header>
 
@@ -101,19 +100,19 @@
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScu14xR_KDrejr7Vc8nVDPLgq_koWFkZKz6Ygc6enS401wzzw/viewform" target="_blank" class="news-link">
     <div class="news-item">
       <img src="assets/old.jpg" alt="News Image 1">
-      <div class="news-overlay-text">CLICK HERE TO APPLY FOR WINGSTAFF TAKEOVER
+      <div class="news-overlay-text">APPLICATION FOR WINGSTAFF TAKEOVER
       </div>
     </div>
     </a>
 
     <div class="news-item">
       <img src="assets/meanadmag.JPG" alt="News Image 2">
-      <div class="news-overlay-text">CLICK HERE TO SUBMIT WEBSITE FEEDBACK</div>
+      <div class="news-overlay-text">WEBSITE FEEDBACK FORM</div>
     </div>
 
     <div class="news-item">
       <img src="assets/oviandand.JPG" alt="News Image 3">
-      <div class="news-overlay-text">ALMOST FRIDAY LOLLL</div>
+      <div class="news-overlay-text">SOME FORM HERE</div>
     </div>
   </div>
 </section>
