not done but good enough

--- a/home.html
+++ b/home.html
@@ -33,10 +33,10 @@
     <button class="nav" id="poc-button">POC ACCESS ▾</button>
     <div class="submenu" id="poc-submenu" style="display: none;">
         <div class="submenu-item">
-            <a href="poc_login.html?target=odt.html" class="submenu-link">ODT Continuity</a>
+            <a href="poc_login.html?target=odt.html" class="submenu-link">ODT CONTINUITY</a>
         </div>
         <div class="submenu-item">
-            <a href="poc_login.html?target=pocjob.html" class="submenu-link">POC Job Continuity</a>
+            <a href="poc_login.html?target=pocjob.html" class="submenu-link">POC JOB CONTINUITY</a>
         </div>
     </div>
 </div>
@@ -63,7 +63,7 @@
                 <!-- Slide 3 -->
                 <div class="carousel-item">
                     <img src="assets/walking.JPG" alt="Command Staff Takeover">
-                    <div class="carousel-text">WELCOME TO THE CADET CORE</div>
+                    <div class="carousel-text">whehehehehhehehe</div>
                 </div>
 
                 <!-- Slide 4 -->
@@ -75,7 +75,7 @@
                 <!-- Slide 5 -->
                 <div class="carousel-item">
                     <img src="assets/bushong.JPG" alt="Leadership Lab 2">
-                    <div class="carousel-text">LEADERSHIP LABORATORY</div>
+                    <div class="carousel-text">smthg inpiriringngg</div>
                 </div>
 
                 <!-- Slide 6 -->
