--- a/pocjob.html
+++ b/pocjob.html
@@ -35,10 +35,10 @@
     <button class="nav" id="poc-button">POC ACCESS ▾</button>
     <div class="submenu" id="poc-submenu" style="display: none;">
         <div class="submenu-item">
-            <a href="poc_login.html?target=odt.html" class="submenu-link">ODT Continuity</a>
+            <a href="poc_login.html?target=odt.html" class="submenu-link">ODT CONTINUITY</a>
         </div>
         <div class="submenu-item">
-            <a href="poc_login.html?target=pocjob.html" class="submenu-link">POC Job Continuity</a>
+            <a href="poc_login.html?target=pocjob.html" class="submenu-link">POC JOB CONTINUITY</a>
         </div>
     </div>
 </div>
