--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
                 <!-- Slide 3 -->
                 <div class="carousel-item">
                     <img src="assets/walking.JPG" alt="Command Staff Takeover">
-                    <div class="carousel-text">whehehehehhehehe</div>
+                    <div class="carousel-text">CADET CORE</div>
                 </div>
 
                 <!-- Slide 4 -->
@@ -75,7 +75,7 @@
                 <!-- Slide 5 -->
                 <div class="carousel-item">
                     <img src="assets/bushong.JPG" alt="Leadership Lab 2">
-                    <div class="carousel-text">smthg inpiriringngg</div>
+                    <div class="carousel-text">LEADERSHIP LABORATORY</div>
                 </div>
 
                 <!-- Slide 6 -->
@@ -112,7 +112,7 @@
 
     <div class="news-item">
       <img src="assets/oviandand.JPG" alt="News Image 3">
-      <div class="news-overlay-text">SOME FORM HERE</div>
+      <div class="news-overlay-text">FORM HERE</div>
     </div>
   </div>
 </section>
@@ -140,7 +140,7 @@
     <ul class="info-list">
       <li>SLAY</li>
       <li>BASE VISITS</li>
-      <li>WAKE UP FOR PT</li>
+      <li>ODTs</li>
     </ul>
   </div>
 
