--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
                 <!-- Slide 2 -->
                 <div class="carousel-item">
                     <img src="assets/ptwayne.JPG" alt="Pacer Forge">
-                    <div class="carousel-text">DRILL & CEREMONIES PRACTICE 0700-0730</div>
+                    <div class="carousel-text">DRILL & CEREMONIES PRACTICE</div>
                 </div>
 
                 <!-- Slide 3 -->
