--- a/awardsbanquet.html
+++ b/awardsbanquet.html
@@ -1,96 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UT San Antonio Detachment 842</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>UT San Antonio Detachment 842</title>
 
-    <!-- Orbitron font -->
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Orbitron font -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="ODT.css">
-    
+  <link rel="stylesheet" href="assets/css/home.css" />
+  <link rel="stylesheet" href="assets/css/ODT.css" />
 </head>
+
 <body>
-    <!-- Header -->
-    <header class="main-header">
-
-
+  <!-- Header -->
+  <header class="main-header">
     <!-- Logos -->
-    <img src="assets/airforcelogo.jpg" alt="Air Force Logo" class="header-logo">
-    <img src="assets/spaceforcedelta.jpg" alt="Space Force Logo" class="header-logo">
-          <a href="home.html">
-  <img src="assets/detlogo.png" alt="DET Logo" class="header-logo">
-</a>
-
+    <img src="assets/images/airforcelogo.jpg" alt="Air Force Logo" class="header-logo" />
+    <img src="assets/images/spaceforcedelta.jpg" alt="Space Force Logo" class="header-logo" />
+    <a href="home.html">
+      <img src="assets/images/detlogo.png" alt="DET Logo" class="header-logo" />
+    </a>
     <!-- Text -->
-        <div class="logo-text">UT SAN ANTONIO DETACHMENT 842</div>
-        <nav class="top-nav">
-             <a href="home.html">HOME</a>
-            <a href="clubs.html" target="_blank">CLUBS</a>
-            <a href="resources.html" target="_blank">RESOURCES</a>
-          <!--<a href="poc_login.html" target="_blank">POC ACCESS</a> -->  
-
-         <div class="nav-item" id="poc-access">
-    <button class="nav" id="poc-button">POC ACCESS ▾</button>
-    <div class="submenu" id="poc-submenu" style="display: none;">
-        <div class="submenu-item">
+    <div class="logo-text">UT SAN ANTONIO DETACHMENT 842</div>
+    <nav class="top-nav">
+      <a href="home.html">HOME</a>
+      <a href="clubs.html" target="_blank">CLUBS</a>
+      <a href="resources.html" target="_blank">RESOURCES</a>
+      <!--<a href="poc_login.html" target="_blank">POC ACCESS</a> -->
+      <div class="nav-item" id="poc-access">
+        <button class="nav" id="poc-button">POC ACCESS ▾</button>
+        <div class="submenu" id="poc-submenu" style="display: none">
+          <div class="submenu-item">
             <a href="poc_login.html?target=odt.html" class="submenu-link">ODT CONTINUITY</a>
-        </div>
-        <div class="submenu-item">
+          </div>
+          <div class="submenu-item">
             <a href="poc_login.html?target=pocjob.html" class="submenu-link">POC JOB CONTINUITY</a>
+          </div>
         </div>
-    </div>
-</div>
+      </div>
+    </nav>
+  </header>
 
-        </nav>
-    </header>
-
-  
- <h1>AWARDS BANQUET 2025</h1>
-<div class="card-container">
-  <div class="cards">
-    <div class="card other">
-      <a class="r_tip" href="awardsbanquet_continuity/Spring 2025 Awards Banquet Continuity.pdf">
-        NOTES
-      </a>
-    </div>
-    <div class="card other">
-      <a class="r_tip" href="awardsbanquet_continuity/Roles Awards Banquet 2025.pdf">
-        VOLUNTEER ROLES
-      </a>
-    </div>
-    <div class="card other">
-      <a class="r_tip" href="awardsbanquet_continuity/Cake topper Awards Banquet 2025.pdf">
-        CAKE TOPPER
-      </a>
-    </div>
-    <div class="card other">
-      <a class="r_tip" href="awardsbanquet_continuity/Gold Bar Presentation Awards Banquet 2025.pdf">
-        GOLD BAR PRESENTATION SLIDES
-      </a>
-    </div>
-    <div class="card fitness">
-      <a class="r_tip" href="awardsbanquet_continuity/LLAB Slides Awards Banquet Spring 2025.pdf">
-        LLAB SLIDES
-      </a>
-    </div>
-    <div class="card other">
-      <a class="r_tip" href="awardsbanquet_continuity/Senior Baby Photos Awards Banquet Spring 25.pdf">
-        SENIOR BABY SLIDES
-      </a>
+  <h1>AWARDS BANQUET 2025</h1>
+  <div class="card-container">
+    <div class="cards">
+      <div class="card other">
+        <a class="r_tip" href="awardsbanquet_continuity/Spring 2025 Awards Banquet Continuity.pdf">
+          NOTES
+        </a>
+      </div>
+      <div class="card other">
+        <a class="r_tip" href="awardsbanquet_continuity/Roles Awards Banquet 2025.pdf">
+          VOLUNTEER ROLES
+        </a>
+      </div>
+      <div class="card other">
+        <a class="r_tip" href="awardsbanquet_continuity/Cake topper Awards Banquet 2025.pdf">
+          CAKE TOPPER
+        </a>
+      </div>
+      <div class="card other">
+        <a class="r_tip" href="awardsbanquet_continuity/Gold Bar Presentation Awards Banquet 2025.pdf">
+          GOLD BAR PRESENTATION SLIDES
+        </a>
+      </div>
+      <div class="card fitness">
+        <a class="r_tip" href="awardsbanquet_continuity/LLAB Slides Awards Banquet Spring 2025.pdf">
+          LLAB SLIDES
+        </a>
+      </div>
+      <div class="card other">
+        <a class="r_tip" href="awardsbanquet_continuity/Senior Baby Photos Awards Banquet Spring 25.pdf">
+          SENIOR BABY SLIDES
+        </a>
+      </div>
     </div>
   </div>
-</div>
 
-<h2>SPRING 2023</h2>
-<div class="card-container">
-  <div class="cards">
-    <div class="card other">
-      <a class="r_tip" href="awardsbanquet_continuity/spring23_awardsbanquet_notes.PDF">
-        NOTES (SPRING 2023)
-      </a>
+  <h2>SPRING 2023</h2>
+  <div class="card-container">
+    <div class="cards">
+      <div class="card other">
+        <a class="r_tip" href="awardsbanquet_continuity/spring23_awardsbanquet_notes.PDF">
+          NOTES (SPRING 2023)
+        </a>
+      </div>
     </div>
   </div>
-</div>
+</body>
+
+</html>
