--- a/home.html
+++ b/home.html
@@ -7,9 +7,10 @@
 	<title>UT San Antonio Detachment 842</title>
 
 	<!-- Orbitron font -->
-	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="assets/css/home.css" />
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/home.css">
 </head>
 
 <body>
