--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<!-- Orbitron font -->
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="assets/css/home.css"> <!-- optional shared stylesheet -->
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/home.css">
 	<link rel="stylesheet" href="assets/css/index.css">
 </head>
 
 <body>
-
 	<!-- Header -->
 	<header class="main-header">
 		<div class="logo-group">
