--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <!-- Login Form -->
   <div class="container">
     <div class="form_area">
-      <h1>DETACHMENT 842</h1>
+      <h1>LOGIN</h1>
       <input placeholder="ENTER PASSWORD" class="form_style" type="password" id="password" name="password" required>
       <button type="button" class="btn" id="submit">LOG IN</button>
     </div>
