--- a/home.html
+++ b/home.html
@@ -25,6 +25,7 @@
     <!-- Text -->
         <div class="logo-text">UT SAN ANTONIO DETACHMENT 842</div>
         <nav class="top-nav">
+           <a href="faqs.html" target="_blank">FAQs</a>
             <a href="clubs.html" target="_blank">CLUBS</a>
             <a href="resources.html" target="_blank">RESOURCES</a>
           <!--<a href="poc_login.html" target="_blank">POC ACCESS</a> -->  
@@ -33,7 +34,7 @@
     <button class="nav" id="poc-button">POC ACCESS ▾</button>
     <div class="submenu" id="poc-submenu" style="display: none;">
         <div class="submenu-item">
-            <a href="poc_login.html?target=odt.html" class="submenu-link">ODT CONTINUITY</a>
+            <a href="poc_login.html?target=odt.html" class="submenu-link">PDT CONTINUITY</a>
         </div>
         <div class="submenu-item">
             <a href="poc_login.html?target=pocjob.html" class="submenu-link">POC JOB CONTINUITY</a>
@@ -50,39 +51,55 @@
             <div class="carousel-track">
                 <!-- Slide 1 -->
                 <div class="carousel-item">
-                    <img src="assets/mti3.JPG" alt="BCL Cadets">
-                    <div class="carousel-text">ORIs and FDEs 18 SEP</div>
-                </div>
-
+  <img src="assets/mti3.JPG" alt="BCL Cadets">
+  <div class="carousel-text">
+    <strong>PRACTICE ORIs AND FDEs</strong><br>
+    FOXTROT FLIGHT
+  </div>
+</div>
                 <!-- Slide 2 -->
                 <div class="carousel-item">
                     <img src="assets/ptwayne.JPG" alt="Pacer Forge">
-                    <div class="carousel-text">DRILL & CEREMONIES PRACTICE</div>
-                </div>
+                     <div class="carousel-text">
+    <strong>DRILL AND CEREMONIES PRACTICE</strong><br>
+    BRAVO FLIGHT
+  </div>
+</div>
 
                 <!-- Slide 3 -->
-                <div class="carousel-item">
-                    <img src="assets/walking.JPG" alt="Command Staff Takeover">
-                    <div class="carousel-text">CADET CORE</div>
-                </div>
-
+                  <div class="carousel-item">
+                    <img src="assets/bushong.JPG" alt="Leadership Lab 2">
+                     <div class="carousel-text">
+    <strong>LEADERSHIP LAB</strong><br>
+    FALL 2024
+  </div>
+</div>
                 <!-- Slide 4 -->
                 <div class="carousel-item">
                     <img src="assets/davis.JPG" alt="Leadership Lab">
-                    <div class="carousel-text"> WE FORGE WARRIOR LEADERS</div>
-                </div>
+                     <div class="carousel-text">
+    <strong>BEST IN BLUE</strong><br>
+    GOLF FLIGHT
+  </div>
+</div>
 
                 <!-- Slide 5 -->
-                <div class="carousel-item">
-                    <img src="assets/bushong.JPG" alt="Leadership Lab 2">
-                    <div class="carousel-text">LEADERSHIP LABORATORY</div>
-                </div>
+               <div class="carousel-item">
+                    <img src="assets/whiskey.JPG" alt="Whiskey">
+                     <div class="carousel-text">
+    <strong>WE FORGE WARRIOR LEADERS</strong><br>
+    WHISKEY FLIGHT
+  </div>
+</div>
 
                 <!-- Slide 6 -->
                 <div class="carousel-item">
                     <img src="assets/alpha.JPG" alt="UTSA Volleyball">
-                    <div class="carousel-text">BEST IN BLUE</div>
-                </div>
+                     <div class="carousel-text">
+    <strong>NSOP</strong><br>
+    ALPHA FLIGHT
+  </div>
+</div>
             </div>
 
             <!-- Carousel buttons -->
@@ -91,31 +108,55 @@
         </div>
     </div>
 
-    <!-- DET 842 NEWS Section -->
+    
+<!-- DET 842 OPPORTUNITIES Section -->
 <section class="det-news">
-  <h2 class="det-news-header">DET 842 NEWS</h2>
+  <h2 class="det-news-header">DET 842 OPPORTUNITIES</h2>
   
   <div class="news-grid">
 
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScu14xR_KDrejr7Vc8nVDPLgq_koWFkZKz6Ygc6enS401wzzw/viewform" target="_blank" class="news-link">
-    <div class="news-item">
-      <img src="assets/old.jpg" alt="News Image 1">
-      <div class="news-overlay-text">APPLICATION FOR WINGSTAFF TAKEOVER
+      <div class="news-item">
+        <img src="assets/old.jpg" alt="Application">
+        <div class="news-overlay-text">WINGSTAFF TAKEOVER</div>
       </div>
-    </div>
     </a>
 
+
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScu14xR_KDrejr7Vc8nVDPLgq_koWFkZKz6Ygc6enS401wzzw/viewform" target="_blank" class="news-link">
     <div class="news-item">
-      <img src="assets/meanadmag.JPG" alt="News Image 2">
+      <img src="assets/meanadmag.JPG" alt="Feedback">
       <div class="news-overlay-text">WEBSITE FEEDBACK FORM</div>
     </div>
+</a>
 
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScu14xR_KDrejr7Vc8nVDPLgq_koWFkZKz6Ygc6enS401wzzw/viewform" target="_blank" class="news-link">
     <div class="news-item">
-      <img src="assets/oviandand.JPG" alt="News Image 3">
-      <div class="news-overlay-text">FORM HERE</div>
+      <img src="assets/botb2025.jpg" alt="Form">
+      <div class="news-overlay-text">PWO!</div>
     </div>
+
+    <a href="https://forms.gle/2PVQC3CtbpsJBhsC6" target="_blank" class="news-link">
+    <div class="news-item">
+      <img src="assets/polexi.png" alt="ODT">
+      <div class="news-overlay-text">JOIN GMC DESIGN TEAM</div>
+    </div>
+
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScu14xR_KDrejr7Vc8nVDPLgq_koWFkZKz6Ygc6enS401wzzw/viewform" target="_blank" class="news-link">
+    <div class="news-item">
+      <img src="assets/norris.JPG" alt="Career Day">
+      <div class="news-overlay-text">ALMOST FRIDAY SUBMISSIONS</div>
+    </div>
+
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScu14xR_KDrejr7Vc8nVDPLgq_koWFkZKz6Ygc6enS401wzzw/viewform" target="_blank" class="news-link">
+    <div class="news-item">
+      <img src="assets/oviandand.JPG" alt="Pass in Review">
+      <div class="news-overlay-text">WANT TO VOLUNTEER?</div>
+    </div>
+</a>
   </div>
 </section>
+
 
 <!-------------------------------------------->
 
@@ -123,14 +164,12 @@
 <section class="info-sections">
   <div class="info-item">
     <h3 class="info-header">USEFUL LINKS</h3>
-    <ul class="info-list">
-   <!-- <li>DET 842 INSTAGRAM</li> -->  
+    <ul class="info-list"> 
       <li>  <a href="https://docs.google.com/document/d/19Kjs--07GgiFaidPQw1p69dwXNZfYgRi_lGLuC9sgVU/edit?usp=sharing" target="_blank">PA ALBUM</a>
       </li>
       <li>ABSENCE FORM</li>
       <li>IG SUBMISSION FORM</li>
        <li>MENTAL HEALTH CHECK</li>
-       <li>ALMOST FRIDAY SUBMISSIONS</li>
       <li>LRS FORM</li>
     </ul>
   </div>
@@ -138,7 +177,6 @@
   <div class="info-item">
     <h3 class="info-header">DET GOALS</h3>
     <ul class="info-list">
-      <li>SLAY</li>
       <li>BASE VISITS</li>
       <li>ODTs</li>
     </ul>
@@ -147,13 +185,33 @@
   <div class="info-item">
     <h3 class="info-header">IMPORTANT DATES</h3>
     <ul class="info-list">
-      <li>PFD - 22 & 25 SEP</li>
-      <li>PICTURE DAY - 06 OCT</li>
-      <li>ORIs & FDEs - 13 OCT</li>
+      <li>  <a href="https://calendar.google.com/calendar/embed?src=c25248960d54fe9d4be53f4975355d4bfe151b314f317a21f3ab2c183a74e287%40group.calendar.google.com&ctz=America%2FChicago" target="_blank">DET 842 GOOGLE CALENDAR</a>
+      </li>
+      <li>FAMILY FEUD SOCIAL - TBD</li>
+      <li>PICTURE DAY - 06 NOV</li>
+      <li>PFD - 11 & 13 NOV</li>
+      <li>ORIs & FDEs - 13 NOV</li>
     </ul>
   </div>
 </section>
 
+<!-- CONNECT SECTION -->
+<section class="connect-section">
+  <div class="connect-content">
+    <div class="connect-left">
+      <h2>CONNECT!</h2>
+      <ul class="social-links">
+        <li><a href="https://www.instagram.com/afrotcdet842?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">DET INSTAGRAM: @AFROTCDET842</a></li>
+        <li><a href="https://www.instagram.com/silverwings.utsa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">SILVER WINGS INSTAGRAM: @SILVERWINGS.UTSA</a></li>
+        <li><a href="https://youtube.com/@afrotcdet8427?si=rxr9hX0e5moogwvX" target="_blank">YOUTUBE: @AFROTCDET847</a></li>
+      </ul>
+    </div>
+
+    <div class="connect-right">
+      <img src="assets/fuller.jpg" alt="Detachment 842 Logo">
+    </div>
+  </div>
+</section>
 
 <script>
 const pocButton = document.getElementById('poc-button');
