--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScu14xR_KDrejr7Vc8nVDPLgq_koWFkZKz6Ygc6enS401wzzw/viewform" target="_blank" class="news-link">
     <div class="news-item">
-      <img src="assets/botb2025.jpg" alt="Form">
+      <img src="assets/pwo.jpg" alt="Form">
       <div class="news-overlay-text">PWO!</div>
     </div>
 
@@ -150,7 +150,7 @@
 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScu14xR_KDrejr7Vc8nVDPLgq_koWFkZKz6Ygc6enS401wzzw/viewform" target="_blank" class="news-link">
     <div class="news-item">
-      <img src="assets/oviandand.JPG" alt="Pass in Review">
+      <img src="assets/volunteer.JPG" alt="Pass in Review">
       <div class="news-overlay-text">WANT TO VOLUNTEER?</div>
     </div>
 </a>
@@ -189,7 +189,7 @@
       </li>
       <li>FAMILY FEUD SOCIAL - TBD</li>
       <li>PICTURE DAY - 06 NOV</li>
-      <li>PFD - 11 & 13 NOV</li>
+      <li>PFA - 11 & 13 NOV</li>
       <li>ORIs & FDEs - 13 NOV</li>
     </ul>
   </div>
