--- a/resources.html
+++ b/resources.html
@@ -56,7 +56,7 @@
 
             <div class="card" onclick="window.location.href='https://drive.google.com/file/d/100AjqdQjNLNnUnklSw7198M9qPBhUpPT/view?usp=sharing'">
                 <div class="card_container">
-                    <img src="assets/bmt.JPG" alt="BMT Manual">
+                    <img src="assets/bmtmanual.JPG" alt="BMT Manual">
                 </div>
                 <div class="sub-card named">
                     <span class="text_span">BMT MANUAL</span>
@@ -65,7 +65,7 @@
 
             <div class="card" onclick="window.location.href='https://drive.google.com/file/d/1mgesz4NkT7A6ygfLTLznJvNTRVOM9AzK/view?usp=sharing'">
                 <div class="card_container">
-                    <img src="assets/bmt.JPG" alt="DAFPAM">
+                    <img src="assets/ibarraandsim.JPG" alt="DAFPAM">
                 </div>
                 <div class="sub-card named">
                     <span class="text_span">DAFPAM</span>
@@ -113,7 +113,7 @@
         <div class="box">
             <div class="card" onclick="window.location.href='https://drive.google.com/drive/folders/1KeAfomDUytdoyVec5zvCFwgwBsNq4lWe'">
                 <div class="card_container">
-                    <img src="assets/WARRIOR.jpg" alt="Warrior Knowledge">
+                    <img src="assets/ibarraandsim.JPG" alt="Warrior Knowledge">
                 </div>
                 <div class="sub-card named">
                     <span class="text_span">WARRIOR KNOWLEDGE</span>
@@ -122,7 +122,7 @@
 
             <div class="card" onclick="window.location.href='/assets/Fall 2025 Organizational Chart.pdf'">
                 <div class="card_container">
-                    <img src="assets/ORGCHART.jpg" alt="Org Chart">
+                    <img src="assets/ibarraandsim.JPG" alt="Org Chart">
                 </div>
                 <div class="sub-card named">
                     <span class="text_span">ORG CHART</span>
@@ -131,7 +131,7 @@
 
             <div class="card" onclick="window.location.href='/assets/Fall Term 2025 Cadet Handbook - Final.pdf'">
                 <div class="card_container">
-                    <img src="assets/HANDBOOK.jpg" alt="Cadet Handbook">
+                    <img src="assets/ibarraandsim.JPG" alt="Cadet Handbook">
                 </div>
                 <div class="sub-card named">
                     <span class="text_span">CADET HANDBOOK</span>
@@ -140,16 +140,16 @@
 
             <div class="card" onclick="window.location.href='https://docs.google.com/document/d/190h6Xa7weY-yfj8B52mQdFtnac6S7z9IECiqhMDp6m4/edit?tab=t.0'">
                 <div class="card_container">
-                    <img src="assets/PAALBUM.jpg" alt="PA Album">
+                    <img src="assets/pastpaalbums.jpg" alt="PA Album">
                 </div>
                 <div class="sub-card named">
-                    <span class="text_span">PA ALBUM</span>
+                    <span class="text_span">PAST PA ALBUMS</span>
                 </div>
             </div>
 
             <div class="card" onclick="window.location.href='/assets/F25 OPLAN final.pdf'">
                 <div class="card_container">
-                    <img src="assets/OPLAN.jpg" alt="O-Plan">
+                    <img src="assets/ibarraandsim.JPG" alt="O-Plan">
                 </div>
                 <div class="sub-card named">
                     <span class="text_span">O-PLAN</span>
@@ -164,7 +164,7 @@
         <div class="box">
             <div class="card" onclick="window.location.href='https://wings.holmcenter.com/psc/hcp/LANDING/PORT_HCP/c/NUI_FRAMEWORK.PT_LANDINGPAGE.GBL?&'">
                 <div class="card_container">
-                    <img src="assets/WINGS.jpg" alt="WINGS">
+                    <img src="assets/ibarraandsim.JPG" alt="WINGS">
                 </div>
                 <div class="sub-card named">
                     <span class="text_span">WINGS</span>
@@ -173,7 +173,7 @@
 
             <div class="card" onclick="window.location.href='https://drive.google.com/file/d/1_RmTx-w9-r549l8dRlfdQHA_QWIKRTVA/view?usp=sharing'">
                 <div class="card_container">
-                    <img src="assets/FORM2.jpg" alt="Form 2">
+                    <img src="assets/ibarraandsim.JPG" alt="Form 2">
                 </div>
                 <div class="sub-card named">
                     <span class="text_span">FORM 2</span>
@@ -182,7 +182,7 @@
 
             <div class="card" onclick="window.location.href='https://docs.google.com/document/d/1Jhlqjud2BrKhGCEbPxmEwlnqe2itHFZk/edit?usp=drive_link&ouid=116295244526067363440&rtpof=true&sd=true'">
                 <div class="card_container">
-                    <img src="assets/MEMO.jpg" alt="Memo Template">
+                    <img src="assets/ibarraandsim.JPG" alt="Memo Template">
                 </div>
                 <div class="sub-card named">
                     <span class="text_span">MEMO TEMPLATE</span>
@@ -191,7 +191,7 @@
 
             <div class="card" onclick="window.location.href='https://docs.google.com/presentation/d/1o0v3NFSBZkKrBWpKE1U-Q9TfuFu_FZ1P/edit?slide=id.p4#slide=id.p4'">
                 <div class="card_container">
-                    <img src="assets/POWERPOINT.jpg" alt="Powerpoint Template">
+                    <img src="assets/ibarraandsim.JPG" alt="Powerpoint Template">
                 </div>
                 <div class="sub-card named">
                     <span class="text_span">POWERPOINT TEMPLATE</span>
